--- a/built/main.css
+++ b/built/main.css
@@ -56,7 +56,7 @@ body {
   color: #766;
   background-color: #dcb; }
 
-.tile0 {
+/*.tile0 {
   background-color: #dcb; }
 
 .tile2 {
@@ -104,7 +104,7 @@ body {
 .tile2048 {
   color: #fff;
   background-color: #ec2;
-  font-size: 35px; }
+  font-size: 35px; }*/
 
 .tile {
   position: absolute; }
